[tool.poetry]
name = "gdrive-sharing-manager"
version = "0.1.0"
description = "A management tool to let others upload files without giving them editor access to the folder."
authors = ["Chris Waltrip <chris@walt.rip>"]
readme = "README.md"
license = "MIT-0"
packages = [{include = "gdrive_sharing_manager"}]
repository = "https://github.com/cawaltrip/gdrive-sharing-manager"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.65.0"
google-auth-oauthlib = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gdrive-share = "gdrive_sharing_manager.main:main"
