[metadata]
name = ludo_media
version = 0.1.0
author = Chris Waltrip
description = Just some tools to manage sharing Ludo media in Google Drive.
#long_description = file: README.md, LICENSE
license = MIT-0
classifiers =
    Programming Language :: Python :: 3

[options]
#package_dir =
#    =src
packages = find:

[options.packages.find]
#where = src

[options.extras_require]
dev =
    black>=22.10.0
    flake8>=5.0.4

[options.entry_points]
console_scripts =
    ludo-media = ludo_media.main:main
